--- a/index.html
+++ b/index.html
@@ -37,29 +37,45 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-coding-in-malibu" class="anchor" href="#welcome-to-coding-in-malibu" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Coding in Malibu</h3>
+          
+<h3>
+  <a id="welcome-to-coding-in-malibu" class="anchor" href="#welcome-to-coding-in-malibu" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Coding in Malibu
+</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for projects on GitHub. Author page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After the page is generated, check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+  <a id="coding-badges" class="anchor" href="#coding-badges" aria-hidden="true"><span class="octicon octicon-link"></span></a>Coding Badges
+</h3>
+
+<p>Progress over time on coding projects or online courses.</p>
+<p><img src="images/badge-git-dd45ff7cc105c5419804a5465e16f2ad.svg" height="120" width="120"><br>
+<a href="https://www.codeschool.com/paths/git">Git<br>https://www.codeschool.com/paths/git</a></p>
+<p><img src="images/badge-course-88637649-f4ac-4de9-9228-71e637dd44db.png" height="120" width="120"><br>
+<a href="https://www.codeschool.com/courses/shaping-up-with-angular-js">Shaping Up with Angular.JS<br>https://www.codeschool.com/courses/shaping-up-with-angular-js</a></p>
+
+<h3>
+  <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
+</h3>
 
 <p>Many templates are available through GitHub --> Repository --> Settings --> GitHub Pages --> Launch automatic page generator.</p>
 <p>This site is using the "Architect" theme.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+  <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually
+</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+  <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors
+</h3>
 
 <p>Use <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to a profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+  <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact
+</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
