--- a/index.html
+++ b/index.html
@@ -49,10 +49,18 @@
 </h3>
 
 <p>Progress over time on coding projects or online courses.</p>
+
 <p><img src="images/badge-git-dd45ff7cc105c5419804a5465e16f2ad.svg" height="120" width="120"><br>
 <a href="https://www.codeschool.com/paths/git">Git<br>https://www.codeschool.com/paths/git</a></p>
-<p><img src="images/badge-course-88637649-f4ac-4de9-9228-71e637dd44db.png" height="120" width="120"><br>
+
+<p><img src="images/badge-course-angular-88637649-f4ac-4de9-9228-71e637dd44db.png" height="120" width="120"><br>
 <a href="https://www.codeschool.com/courses/shaping-up-with-angular-js">Shaping Up with Angular.JS<br>https://www.codeschool.com/courses/shaping-up-with-angular-js</a></p>
+
+<p><img src="images/badge-course-411992c2-ff44-4a96-b7f8-54eca288c49e.png" height="120" width="120"><br>
+<a href="https://www.codeschool.com/courses/try-sql">SQL<br>https://www.codeschool.com/courses/try-sql</a></p>
+
+<p><img src="images/badge-course-sql-61a5b8d40f49efccf26fd3e84619545b.png" height="120" width="120"><br>
+<a href="https://www.codeschool.com/courses/the-sequel-to-sql">Sequel to SQL<br></a></p>
 
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
