--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <a href="https://www.codeschool.com/courses/try-sql">SQL<br>https://www.codeschool.com/courses/try-sql</a></p>
 
 <p><img src="images/badge-course-sql-61a5b8d40f49efccf26fd3e84619545b.png" height="120" width="120"><br>
-<a href="https://www.codeschool.com/courses/the-sequel-to-sql">Sequel to SQL<br></a></p>
+<a href="https://www.codeschool.com/courses/the-sequel-to-sql">Sequel to SQL<br>https://www.codeschool.com/courses/the-sequel-to-sql</a></p>
 
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
