--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 <p><img src="images/badge-course-sql-61a5b8d40f49efccf26fd3e84619545b.png" height="120" width="120"><br>
 <a href="https://www.codeschool.com/courses/the-sequel-to-sql">Sequel to SQL<br>https://www.codeschool.com/courses/the-sequel-to-sql</a></p>
 
+<p><img src="images/badge-course-javascript1-3c8455e473ad5c4373015cbce7fef3c0.png" height="120" width="120"><br>
+<a href="https://www.codeschool.com/courses/javascript-road-trip-part-1">Javascript Road Trip<br>https://www.codeschool.com/courses/javascript-road-trip-part-1</a></p>
+
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
 </h3>
