add command line

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 <p><img src="images/badge-course-javascript1-3c8455e473ad5c4373015cbce7fef3c0.png" height="120" width="120"><br>
 <a href="https://www.codeschool.com/courses/javascript-road-trip-part-1">Javascript Road Trip<br>https://www.codeschool.com/courses/javascript-road-trip-part-1</a></p>
 
+<p><img src="images/badge-command-line.svg" height="120" width="120"><br>
+<a href="https://www.codecademy.com/en/courses/learn-the-command-line">Command Line<br>https://www.codecademy.com/en/courses/learn-the-command-line
+</a></p>
+
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
 </h3>
