add js roadtrip 3

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 <p><img src="images/badge-course-javascript1-3c8455e473ad5c4373015cbce7fef3c0.png" height="120" width="120"><br>
 <a href="https://www.codeschool.com/courses/javascript-road-trip-part-1">Javascript Road Trip<br>https://www.codeschool.com/courses/javascript-road-trip-part-1</a></p>
 
+<p><img src="images/badge-javascript2-d4fd45ae7ecb6601fe4a0c8d506ca306.png" height="120" width="120"><br>
+<a href="https://www.codeschool.com/courses/javascript-road-trip-part-2">Javascript Road Trip (2)<br>https://www.codeschool.com/courses/javascript-road-trip-part-2</a></p>
+
+<p><img src="images/png" height="120" width="120"><br>
+<a href="https://www.codeschool.com/courses/javascript-road-trip-part-3">Javascript Road Trip (3)<br>https://www.codeschool.com/courses/javascript-road-trip-part-3</a></p>
+
 <p><img src="images/badge-command-line.svg" height="120" width="120"><br>
 <a href="https://www.codecademy.com/en/courses/learn-the-command-line">Command Line<br>https://www.codecademy.com/en/courses/learn-the-command-line
 </a></p>
