--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p><img src="images/badge-javascript2-d4fd45ae7ecb6601fe4a0c8d506ca306.png" height="120" width="120"><br>
 <a href="https://www.codeschool.com/courses/javascript-road-trip-part-2">Javascript Road Trip (2)<br>https://www.codeschool.com/courses/javascript-road-trip-part-2</a></p>
 
-<p><img src="images/png" height="120" width="120"><br>
+<p><img src="images/badge-javascript3-6c96fe52f9c68b790937d3db2110325a.png" height="120" width="120"><br>
 <a href="https://www.codeschool.com/courses/javascript-road-trip-part-3">Javascript Road Trip (3)<br>https://www.codeschool.com/courses/javascript-road-trip-part-3</a></p>
 
 <p><img src="images/badge-command-line.svg" height="120" width="120"><br>
