changed codinginmalibu to surfingonrails, added make a website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Coding in Malibu by codinginmalibu</title>
+    <title>Surfing On Rails</title>
   </head>
 
   <body>
@@ -28,18 +28,18 @@
     <!-- End Google Tag Manager -->
     <header>
       <div class="inner">
-        <h1>Coding in Malibu</h1>
+        <h1>Surfing On Rails</h1>
         <h2>Always Learning... Always Growing...</h2>
-        <a href="https://github.com/codinginmalibu" class="button"><small>Follow me on</small> GitHub</a>
+        <a href="https://github.com/surfingonrails" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          
+
 <h3>
-  <a id="welcome-to-coding-in-malibu" class="anchor" href="#welcome-to-coding-in-malibu" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Coding in Malibu
+  <a id="welcome-to-surfing-on-rails" class="anchor" href="#welcome-to-surfing-on-rails" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Surfing on Rails
 </h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for projects on GitHub. Author page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After the page is generated, check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
@@ -74,6 +74,11 @@
 <p><img src="images/badge-command-line.svg" height="120" width="120"><br>
 <a href="https://www.codecademy.com/en/courses/learn-the-command-line">Command Line<br>https://www.codecademy.com/en/courses/learn-the-command-line
 </a></p>
+
+<p><img src="images/images/badge-make-a-website-4f15118b35cdf91f2b548c2df4e6b45a.svg" height="120" width="120"><br>
+<a href="https://www.codecademy.com/learn/make-a-website">Make a Website<br>https://www.codecademy.com/learn/make-a-website
+</a></p>
+
 
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
