update with deploy a website

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 <a href="https://www.codecademy.com/learn/make-a-website">Make a Website<br>https://www.codecademy.com/learn/make-a-website
 </a></p>
 
+<p><img src="images/badge-deploy-a-website-ef8a4624924a482e57453f3414de64aa.svg" height="120" width="120"><br>
+<a href="https://www.codecademy.com/learn/deploy-a-website">Deploy a Website<br>https://www.codecademy.com/learn/deploy-a-website
+</a></p>
+
 
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
