add badge for sql analyzing business metrics

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
 <a href="https://www.codecademy.com/learn/deploy-a-website">Deploy a Website<br>https://www.codecademy.com/learn/deploy-a-website
 </a></p>
 
+<p><img src="images/badge-sql-analyzing-business-metrics-2365d4abb7a8c530bb8ac0a4da1d4813.svg" height="120" width="120"><br>
+<a href="https://www.codecademy.com/learn/sql-analyzing-business-metrics">SQL Analyzing Business Metrics<br>https://www.codecademy.com/learn/sql-analyzing-business-metrics
+</a></p>
+
+
+
 
 <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
