--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="main-content">
 
 <h3>
-  <a id="welcome-to-surfing-on-rails" class="anchor" href="#welcome-to-surfing-on-rails" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Surfing on Rails
+  <a id="welcome-to-surfing-on-rails" class="anchor" href="#welcome-to-surfing-on-rails" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome - Surfing on Rails
 </h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for projects on GitHub. Author page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After the page is generated, check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
