--- a/index.html
+++ b/index.html
@@ -72,20 +72,16 @@
 <a href="https://www.codeschool.com/courses/javascript-road-trip-part-3">Javascript Road Trip (3)<br>https://www.codeschool.com/courses/javascript-road-trip-part-3</a></p>
 
 <p><img src="images/badge-command-line.svg" height="120" width="120"><br>
-<a href="https://www.codecademy.com/en/courses/learn-the-command-line">Command Line<br>https://www.codecademy.com/en/courses/learn-the-command-line
-</a></p>
+<a href="https://www.codecademy.com/en/courses/learn-the-command-line">Command Line<br>https://www.codecademy.com/en/courses/learn-the-command-line</a></p>
 
 <p><img src="images/badge-make-a-website-4f15118b35cdf91f2b548c2df4e6b45a.svg" height="120" width="120"><br>
-<a href="https://www.codecademy.com/learn/make-a-website">Make a Website<br>https://www.codecademy.com/learn/make-a-website
-</a></p>
+<a href="https://www.codecademy.com/learn/make-a-website">Make a Website<br>https://www.codecademy.com/learn/make-a-website</a></p>
 
 <p><img src="images/badge-deploy-a-website-ef8a4624924a482e57453f3414de64aa.svg" height="120" width="120"><br>
-<a href="https://www.codecademy.com/learn/deploy-a-website">Deploy a Website<br>https://www.codecademy.com/learn/deploy-a-website
-</a></p>
+<a href="https://www.codecademy.com/learn/deploy-a-website">Deploy a Website<br>https://www.codecademy.com/learn/deploy-a-website</a></p>
 
 <p><img src="images/badge-sql-analyzing-business-metrics-2365d4abb7a8c530bb8ac0a4da1d4813.svg" height="120" width="120"><br>
-<a href="https://www.codecademy.com/learn/sql-analyzing-business-metrics">SQL Analyzing Business Metrics<br>https://www.codecademy.com/learn/sql-analyzing-business-metrics
-</a></p>
+<a href="https://www.codecademy.com/learn/sql-analyzing-business-metrics">SQL Analyzing Business Metrics<br>https://www.codecademy.com/learn/sql-analyzing-business-metrics</a></p>
 
 
 
