sql table transformation

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
 <p><img src="images/badge-sass-4814f8fa5a39b8a4ffc992b23872b370.svg" height="120" width="120"><br>
 <a href="https://www.codecademy.com/learn/learn-sass">Learn Sass<br>https://www.codecademy.com/learn/learn-sass</a></p>
 
+<p><img src="images/badge-sql-analyzing-business-metrics-2365d4abb7a8c530bb8ac0a4da1d4813.svg" height="120" width="120"><br>
+<a href="https://www.codecademy.com/learn/sql-table-transformation">SQL: Table Transformation<br>https://www.codecademy.com/learn/sql-table-transformation</a></p>
 
 
+
+<!-- =================================================================== -->
 
 
 <h3>
